WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71452
[Qt][WK2] Failing assertion with desktop webview when touch mocking in MinBrowser
https://bugs.webkit.org/show_bug.cgi?id=71452
Summary
[Qt][WK2] Failing assertion with desktop webview when touch mocking in MinBro...
Simon Hausmann
Reported
2011-11-03 03:03:44 PDT
[Qt][WK2] Failing assertion with desktop webview when touch mocking in MinBrowser
Attachments
[Qt][WK2] Failing assertion with desktop webview when touch mocking in MinBrowser
(2.21 KB, patch)
2011-11-03 03:08 PDT
,
Simon Hausmann
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2011-11-03 03:06:21 PDT
When using the MiniBrowser with the desktop view, the touch mocking ends up sending a touch event to the desktop view. That causes a ASSERT_NOT_REACHED() in QtDesktopWebPageProxy::doneWithTouchEvent(). This is due to QDesktopWebView re-implementing touchEvent and the fix for
bug #71310
introducing simple touch event forwarding for WTR.
Simon Hausmann
Comment 2
2011-11-03 03:08:15 PDT
Created
attachment 113451
[details]
[Qt][WK2] Failing assertion with desktop webview when touch mocking in MinBrowser
Andreas Kling
Comment 3
2011-11-03 05:08:10 PDT
Comment on
attachment 113451
[details]
[Qt][WK2] Failing assertion with desktop webview when touch mocking in MinBrowser rs=me
Simon Hausmann
Comment 4
2011-11-03 05:09:58 PDT
Comment on
attachment 113451
[details]
[Qt][WK2] Failing assertion with desktop webview when touch mocking in MinBrowser Clearing flags on attachment: 113451 Committed
r99170
: <
http://trac.webkit.org/changeset/99170
>
Simon Hausmann
Comment 5
2011-11-03 05:10:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug