[Qt][WK2] Failing assertion with desktop webview when touch mocking in MinBrowser https://bugs.webkit.org/show_bug.cgi?id=71452

Reviewed by Andreas Kling.

Don't re-implement touchEvent(), we don't intend to support touch events as we
receive them from the QQuickCanvas at this point.

* UIProcess/API/qt/qdesktopwebview.cpp:
* UIProcess/API/qt/qdesktopwebview.h:

Canonical link: https://commits.webkit.org/87761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99170 268f45cc-cd09-0410-ab3c-d52691b4dbfc